--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,9 @@
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+			{% if page.title != "Jammy" %}
+ 				<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          	{% endif %}
           {% endif %}
         {% endfor %}
       </div>
