Updates documentation page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer>
     <div class="container">
-
       <div class="row-fluid">
         <div class="col-md-1">
           <img src="images/caution.png" class="center img-responsive"/>
@@ -13,8 +12,14 @@
           </p>
         </div>
         <div class="col-md-8">
-          <p>
+          <p class="medium">
+            Jammy
           </p>
+          <ul>
+            <li><a href="https://github.com/Faylixe/review.classdesign.jammy" target="_blank">GitHub repository</a></li>
+            <li><a href="http://classdesign.review" target="_blank">Author website</a></li>
+            <li><a href="" target="_blank">Follow on twitter</a></li>
+          </ul>
         </div>
       </div>
     </div>
