--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
           <ul>
             <li><a href="installation.html">Installation</a></li>
             <li><a href="documentation.html">Documentation</a></li>
-            <li><a href="api.html">API</a></li>
+            <li><a href="http://github.com/Faylixe/review.classdesign.jammy/wiki" target="_blank">Developer wiki</a></li>
           </ul>
         </div>
       </div>
