Updates Jammy site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,10 @@
           </p>
         </div>
         <div class="col-md-8">
-          <p class="medium">
-            Jammy
-          </p>
           <ul>
-            <li><a href="https://github.com/Faylixe/review.classdesign.jammy" target="_blank">GitHub repository</a></li>
-            <li><a href="http://classdesign.review" target="_blank">Author website</a></li>
-            <li><a href="" target="_blank">Follow on twitter</a></li>
+            <li><a href="https://github.com/Faylixe/review.classdesign.jammy" target="_blank">&gt;&nbsp;GitHub repository</a></li>
+            <li><a href="http://classdesign.review" target="_blank">&gt;&nbsp;Author website</a></li>
+            <li><a href="https://twitter.com/search?q=%23Jammy" target="_blank">&gt;&nbsp;Follow on twitter</a></li>
           </ul>
         </div>
       </div>
