Updates installation page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <div id="navigation" class="collapse navbar-collapse">
           <ul>
             <li><a href="installation.html">Installation</a></li>
-            <li><a href="documentation.html">Documentation</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="http://github.com/Faylixe/review.classdesign.jammy/wiki" target="_blank">Developer wiki</a></li>
           </ul>
         </div>
