--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             you are using it in a real contest condition.
           </p>
         </div>
-        <div class="col-md-8 centered">
+        <div class="col-md-8">
           <ul>
             <li><a href="https://github.com/Faylixe/review.classdesign.jammy" target="_blank">&gt;&nbsp;GitHub repository</a></li>
             <li><a href="http://classdesign.review" target="_blank">&gt;&nbsp;Author website</a></li>
