Adding issues link to the header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
           <ul>
             <li><a href="installation.html">Installation</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="http://github.com/Faylixe/review.classdesign.jammy/wiki" target="_blank">Developer wiki</a></li>
+            <li><a href="http://github.com/Faylixe/jammy/wiki" target="_blank">Developer wiki</a></li>
+            <li><a href="https://github.com/Faylixe/jammy/issues">Issues</li>
           </ul>
         </div>
       </div>
