--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             <li><a href="installation.html">Installation</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="http://github.com/Faylixe/jammy/wiki" target="_blank">Developer wiki</a></li>
-            <li><a href="https://github.com/Faylixe/jammy/issues">Issues</li>
+            <li><a href="https://github.com/Faylixe/jammy/issues" target="_blank">Issues</a></li>
           </ul>
         </div>
       </div>
